--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-qiniu",
-  "version": "10.0.0",
+  "name": "node-qiniu-sk",
+  "version": "8.0.0",
   "description": "Qiniu Resource Storage SDK for Node.js",
   "main": "index.js",
   "directories": {
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iwillwen/node-qiniu.git"
+    "url": "https://github.com/sunkint/node-qiniu.git"
   },
   "keywords": [
     "cloud",
